# goodmap-nothingshere

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml  todo.yml
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: MapOverlay.jsx  Plugin.jsx
goodmap_nothingshere/: __init__.py  plugin.py
goodmap_nothingshere/locale/en/LC_MESSAGES/: messages.po
goodmap_nothingshere/locale/pl/LC_MESSAGES/: messages.po
tests/: test_plugin.py
