[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "goodmap_nothingshere"
version = "0.1.0"
description = "goodmap plugin that shows popup if no point is visible in a view"
authors = ["krzysztof.kolodzinski@problematy.pl"]
license = "MIT"
readme = "README.md"
include = ["goodmap_nothingshere/locale/**"]

[tool.poetry.dependencies]
python = "^3.14"
goodmap = "^1.8.0"

[tool.poetry.plugins."goodmap.plugins"]
nothingshere = "goodmap_nothingshere:NothingsherePlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
ruff = "^0.8.3"
pyright = "^1.1.390"
coverage = "^7.6.9"
interrogate = "^1.7.0"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py313"
show-fixes = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PT",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = true
reportUntypedBaseClass = false

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test",
]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]

