[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "goodmap_nothingshere"
version = "0.1.6"
description = "goodmap plugin that shows popup if no point is visible in a view"
authors = ["krzysztof.kolodzinski@problematy.pl"]
license = "MIT"
readme = "README.md"
# Ship the gitignored build outputs (compiled frontend bundle + translations).
# The trailing glob MUST be "**/*", not "**": under Python 3.12 (used by the release
# CI) pathlib's "**" matches only directories, so "static/**" matched no files and the
# 0.1.5 wheel shipped without the bundle. "**/*" matches the files on every version.
include = [
    { path = "goodmap_nothingshere/locale/**/*", format = ["sdist", "wheel"] },
    { path = "goodmap_nothingshere/static/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.12"
goodmap = "^2.0.0a2"

[tool.poetry.plugins."goodmap.plugins"]
nothingshere = "goodmap_nothingshere:NothingsherePlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
ruff = ">=0.8.3,<0.16.0"
pyright = "^1.1.390"
coverage = "^7.6.9"
interrogate = "^1.7.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
show-fixes = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PT",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = true
reportUntypedBaseClass = false

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test",
]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]

